--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -6,10 +6,10 @@
  * > 992 font sizes: body: 24px, headlines 32px, subheads: 29px, form fields: 18px, buttons: 18px, smaller-text: 14px
 **/
 
-@baseFontSize:    18px;
+@baseFontSize:    16px;
 @headlineSize:    1.25em;
 @subheadSize:     1.20em;
-@lgFontSize:      1.8em;
+@lgFontSize:      1.6em;
 @lgHeadlineSize:  1.30em;
 @lgsubheadSize:   1.20em;
 @smallerText:     0.85em;
@@ -388,7 +388,7 @@ a.btn {
 }
 .form-group {
   .help-block {
-    font-size: 16px;
+    font-size: 0.95em;
   }
   label {
     font-weight: normal;
@@ -484,7 +484,7 @@ a.btn {
   }
 }
 .tnth-form .form-group > label {
-  font-size: 18px;
+  font-size: 1em;
   color: #777;
 }
 .form-with-floats {
@@ -553,6 +553,15 @@ a.btn {
 #userRace label {
   margin-bottom: 0
 }
+
+#userIndigenousStatusContainer {
+  .checkbox label{
+    margin-bottom: 4px;
+  }
+  .radio label{
+    margin-bottom: 4px;
+  }
+} 
 
 #genderLabel {
   margin-bottom: 0
