--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -239,7 +239,7 @@
                 if (selectedOption.val() == 'invite') 
                     url = getUrl();
                 else // reminder
-                    url = '{{ url_for('') }}';
+                    url = '{{ url_for('/') }}';
                 if (url != '') {
 
                     {# javascript variables are not available at template
