Another attempt at a fix for url_for call - reminder email

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -239,7 +239,7 @@
                 if (selectedOption.val() == 'invite') 
                     url = getUrl();
                 else // reminder
-                    url = '{{ url_for('/') }}';
+                    url = '{{ url_for('portal.landing') }}';
                 if (url != '') {
 
                     {# javascript variables are not available at template
