--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -248,7 +248,7 @@
                     subject = '{{ app_text('profileSendEmail invite email_subject') }}'
                 }
                 else { // reminder
-                    body = '{{ app_text('profileSendEmail reminder email_body', url_for('portal.landing', _external=True)) | safe }}';
+                    body = '{{ app_text('profileSendEmail reminder email_body', url_for('user.login', _external=True, email=person.email)) | safe }}';
                     subject = '{{ app_text('profileSendEmail reminder email_subject') }}'
                 }
                 if (body != '') {
