Minor verbiage edit for my last commit re: Log in as this patient (ui prototype)

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -552,7 +552,7 @@
           </div>
           <div class="modal-body" style="font-size:0.8em">
             <br/>
-            <p class="text-left">Not yet implemented. This is intended for "kiosk" style administration of an assessment, wherein the staff person "logs in as the patient", effectively logging the staff person out of their session, and automatically logging in this patient without their needing to enter login credentials.</p>
+            <p class="text-left">Not yet implemented. This is intended for "kiosk" style administration of an assessment, wherein the staff person "logs in as the patient", which logs the staff person out of their session, and automatically logs in this patient without their needing to enter login credentials.</p>
             <br/>
           </div>
           <div class="modal-footer">
